examples/diagnostics/expected/1184-diagnostics-weld-fn-unexported.stderr
error: unknown ABI (expected '.c' or '.naked')
  --> examples/diagnostics/1184-diagnostics-weld-fn-unexported.sx:13:48
   |
13 | not_a_real_compiler_fn :: (x: i64) -> i64 abi(.compiler);
   |                                                ^^^^^^^^
